venezuela/launcher-api/go-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: venezuela-launcher-api-deployment
  labels:
    app: venezuela-launcher-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: venezuela-launcher-api
  template:
    metadata:
      labels:
        app: venezuela-launcher-api
    spec:
      containers:
        - name: venezuela-launcher-api
          image: ghcr.io/kaizerpwn/venezuela-launcher-api:862b1e8f55becd56b2244d304be3c2b3b6ac66d4
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
