venezuela/launcher-api/go-service.yml
apiVersion: v1
kind: Service
metadata:
  name: venezuela-launcher-api-service
spec:
  type: ClusterIP
  selector:
    app: venezuela-launcher-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
